--- a/SAFE_PARKING_FRONT/src/app/components/horario/listar-usuario-horario/listar-usuario-horario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/listar-usuario-horario/listar-usuario-horario.component.html
@@ -1,57 +1,62 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="containero">
-      <table class="calendar">
-        <thead>
-          <tr>
-            <th></th>
-            <ng-container *ngFor="let dia of diasDeLaSemana">
-              <th>{{ dia }}</th>
-            </ng-container>
-          </tr>
-        </thead>
-        <tbody>
-          <ng-container *ngFor="let hora of horasDelDia">
+<router-outlet></router-outlet>
+<div [hidden]="route.children.length !== 0">
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Document</title>
+    </head>
+    <body>
+      <app-navbar-administrador></app-navbar-administrador>
+
+      <div class="containero">
+        <table class="calendar">
+          <thead>
             <tr>
-              <td>{{ hora }}</td>
+              <th></th>
               <ng-container *ngFor="let dia of diasDeLaSemana">
-                <td>
-                  <ng-container *ngFor="let fechaHorario of horariosPorFecha">
-                    <ng-container
-                      *ngIf="obtenerNombreDia(fechaHorario.fecha) === dia"
-                    >
+                <th>{{ dia }}</th>
+              </ng-container>
+            </tr>
+          </thead>
+          <tbody>
+            <ng-container *ngFor="let hora of horasDelDia">
+              <tr>
+                <td>{{ hora }}</td>
+                <ng-container *ngFor="let dia of diasDeLaSemana">
+                  <td>
+                    <ng-container *ngFor="let fechaHorario of horariosPorFecha">
                       <ng-container
-                        *ngFor="let horario of fechaHorario.horarios"
+                        *ngIf="obtenerNombreDia(fechaHorario.fecha) === dia"
                       >
                         <ng-container
-                          *ngIf="compararHorarioConHora(horario, hora)"
+                          *ngFor="let horario of fechaHorario.horarios"
                         >
-                          <div class="horario-item">
-                            <p>Fecha: {{ fechaHorario.fecha }}</p>
-                            <p>Hora inicio: {{ horario.horaApertura }}</p>
-                            <p>Hora cierre: {{ horario.horaCierre }}</p>
-                            <button
-                              (click)="obtenerIdHorario(horario.idHorario)"
-                            >
-                              Obtener ID
-                            </button>
-                          </div>
+                          <ng-container
+                            *ngIf="compararHorarioConHora(horario, hora)"
+                          >
+                            <div class="horario-item">
+                              <p>Fecha: {{ fechaHorario.fecha }}</p>
+                              <p>Hora inicio: {{ horario.horaApertura }}</p>
+                              <p>Hora cierre: {{ horario.horaCierre }}</p>
+                              <button
+                                (click)="obtenerIdHorario(horario.idHorario)"
+                              >
+                                Obtener ID
+                              </button>
+                            </div>
+                          </ng-container>
                         </ng-container>
                       </ng-container>
                     </ng-container>
-                  </ng-container>
-                </td>
-              </ng-container>
-            </tr>
-          </ng-container>
-        </tbody>
-      </table>
-    </div>
-  </body>
-</html>
+                  </td>
+                </ng-container>
+              </tr>
+            </ng-container>
+          </tbody>
+        </table>
+      </div>
+    </body>
+  </html>
+</div>
