--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.css
@@ -4,8 +4,8 @@ body {
               url('https://img.freepik.com/fotos-premium/central-park-hermoso-contraste-rascacielos-edificios-manhattan-nueva-york-ee-uu_71337-684.jpg?w=360');
   background-size: cover;
   color: #080808;
-  height: 300%;
   margin-left: 250px;
+  padding: 100px;
 
 }
 
