--- a/SAFE_PARKING_FRONT/src/app/components/membresia/buscar-membresia/buscar-membresia.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/buscar-membresia/buscar-membresia.component.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="form">
+      <app-navbar-administrador></app-navbar-administrador>
       <div class="generic-group">
         <label for="inputId">Ingrese el ID:</label>
         <input id="inputId" type="number" [(ngModel)]="id" />
