--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
@@ -330,6 +330,12 @@
           >
         </li>
       </ul>
+
+      <input type="checkbox" class="menu-toggle" />
+      <label for="menu16" class="menu" routerLink="/login" (click)="cerrar()">
+        <i class="material-icons">logout</i>
+        Salir
+      </label>
     </div>
 
     <script>
