--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/buscar-usuarios/buscar-usuarios.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/buscar-usuarios/buscar-usuarios.component.css
@@ -3,7 +3,6 @@ body {
   background: linear-gradient(to right, #11998e, #38ef7d);
   padding: 30px;
   margin-left: 250px;
-
 }
 
 
@@ -14,7 +13,7 @@ body {
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   width: 800px;
-  margin: 100px auto;
+  margin:  auto;
   /* Centrar horizontalmente */
   flex-direction: column;
   justify-content: center;
