--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/listar-admin-usuario/listar-admin-usuario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/listar-admin-usuario/listar-admin-usuario.component.html
@@ -9,6 +9,8 @@
     </head>
 
     <body>
+      <app-navbar-administrador></app-navbar-administrador>
+
       <h2 style="text-align: center">Lista de Usuarios</h2>
       <div class="container">
         <br />
