--- a/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/listar-admin-horario-estacionamiento/listar-admin-horario-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/listar-admin-horario-estacionamiento/listar-admin-horario-estacionamiento.component.css
@@ -2,12 +2,12 @@ body {
   font-family: Arial, sans-serif;
   background: linear-gradient(to right, #11998e, #38ef7d);
   margin-left: 250px;
+  padding: 100px;
 
 }
 
 h2 {
   color: #333;
-  padding-top:30px;
 }
 .container {
   width: 90%;
@@ -16,9 +16,6 @@ h2 {
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin: 0 auto;
-  /* Centra horizontalmente */
-  margin-top: 50px;
-
   overflow: auto;
 }
 
