--- a/SAFE_PARKING_FRONT/src/app/components/incidente/buscar-incidente/buscar-incidente.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/buscar-incidente/buscar-incidente.component.html
@@ -1,36 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
+<router-outlet></router-outlet>
+<div [hidden]="route.children.length !== 0">
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Document</title>
+    </head>
 
-  <body>
-    <div class="form">
-      <div class="generic-group">
-        <label for="inputId">Ingrese el ID del incidente:</label>
-        <input id="inputId" type="number" [(ngModel)]="idIncidente" />
-        <button (click)="buscar()">Buscar</button>
-      </div>
-      <hr />
-      <div class="generic-details" *ngIf="incidente">
-        <h2 class="generic-heading">Detalles del Incidente</h2>
-        <div class="generic-box">
-          <h1>Descripcion</h1>
-          <p>{{ incidente.descripcion }}</p>
-        </div>
-        <div class="generic-box">
-          <h1>Tipo de Incidente</h1>
-          <p>{{ incidente.tipoIncidente }}</p>
-        </div>
-        <div class="generic-box">
-          <h1>Usuario</h1>
-          <p>{{ incidente.usuario.nombre }}</p>
-        </div>
+    <body>
+      <app-navbar-administrador></app-navbar-administrador>
 
-        <!-- Agrega más campos según la estructura de tu objeto Vehiculo -->
+      <div class="form">
+        <div class="generic-group">
+          <label for="inputId">Ingrese el ID del incidente:</label>
+          <input id="inputId" type="number" [(ngModel)]="idIncidente" />
+          <button (click)="buscar()">Buscar</button>
+        </div>
+        <hr />
+        <div class="generic-details" *ngIf="incidente">
+          <h2 class="generic-heading">Detalles del Incidente</h2>
+          <div class="generic-box">
+            <h1>Descripcion</h1>
+            <p>{{ incidente.descripcion }}</p>
+          </div>
+          <div class="generic-box">
+            <h1>Tipo de Incidente</h1>
+            <p>{{ incidente.tipoIncidente }}</p>
+          </div>
+          <div class="generic-box">
+            <h1>Usuario</h1>
+            <p>{{ incidente.usuario.nombre }}</p>
+          </div>
+
+          <!-- Agrega más campos según la estructura de tu objeto Vehiculo -->
+        </div>
       </div>
-    </div>
-  </body>
-</html>
+    </body>
+  </html>
+</div>
