--- a/SAFE_PARKING_FRONT/src/app/components/incidente/listar-admin-incidente/listar-admin-incidente.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/listar-admin-incidente/listar-admin-incidente.component.html
@@ -1,88 +1,95 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
+<router-outlet></router-outlet>
+<div [hidden]="route.children.length !== 0">
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Document</title>
+    </head>
 
-  <body>
-    <div class="litle">
-      <h2 style="text-align: center">LISTA DE INCIDENTES</h2>
-    </div>
+    <body>
+      <app-navbar-administrador></app-navbar-administrador>
 
-    <div class="container">
-      <mat-form-field>
-        <input
-          style="text-align: left"
-          matInput
-          (keyup)="filter($event)"
-          placeholder="buscar"
-        />
-      </mat-form-field>
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <!-- idIncidente Column -->
-        <ng-container matColumnDef="idIncidente">
-          <th mat-header-cell *matHeaderCellDef>idIncidente</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.idIncidente }}
-          </td>
-        </ng-container>
+      <div class="litle">
+        <h2 style="text-align: center">LISTA DE INCIDENTES</h2>
+      </div>
 
-        <!-- descripcion Column -->
-        <ng-container matColumnDef="descripcion">
-          <th mat-header-cell *matHeaderCellDef>descripcion</th>
-          <td mat-cell *matCellDef="let element">{{ element.descripcion }}</td>
-        </ng-container>
+      <div class="container">
+        <mat-form-field>
+          <input
+            style="text-align: left"
+            matInput
+            (keyup)="filter($event)"
+            placeholder="buscar"
+          />
+        </mat-form-field>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+          <!-- idIncidente Column -->
+          <ng-container matColumnDef="idIncidente">
+            <th mat-header-cell *matHeaderCellDef>idIncidente</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.idIncidente }}
+            </td>
+          </ng-container>
 
-        <!-- tipoIncidente Column -->
-        <ng-container matColumnDef="tipoIncidente">
-          <th mat-header-cell *matHeaderCellDef>tipoIncidente</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.tipoIncidente }}
-          </td>
-        </ng-container>
+          <!-- descripcion Column -->
+          <ng-container matColumnDef="descripcion">
+            <th mat-header-cell *matHeaderCellDef>descripcion</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.descripcion }}
+            </td>
+          </ng-container>
 
-        <!-- usuario Column -->
-        <ng-container matColumnDef="usuario">
-          <th mat-header-cell *matHeaderCellDef>usuario</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.usuario.idUsuario }}
-          </td>
-        </ng-container>
+          <!-- tipoIncidente Column -->
+          <ng-container matColumnDef="tipoIncidente">
+            <th mat-header-cell *matHeaderCellDef>tipoIncidente</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.tipoIncidente }}
+            </td>
+          </ng-container>
 
-        <ng-container matColumnDef="accion01">
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
-          <td mat-cell *matCellDef="let element">
-            <button
-              mat-raised-button
-              color="primary"
-              [routerLink]="['ediciones', element.idIncidente]"
-            >
-              <mat-icon>edit</mat-icon> Editar
-            </button>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="accion02">
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
-          <td mat-cell *matCellDef="let element">
-            <button
-              mat-raised-button
-              color="warn"
-              (click)="eliminar(element.idIncidente)"
-            >
-              <mat-icon>delete</mat-icon> Eliminar
-            </button>
-          </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
-      <br />
-      <mat-paginator
-        [pageSizeOptions]="[5, 10, 25, 100]"
-        showFirstLastButtons
-      ></mat-paginator>
-    </div>
-  </body>
-</html>
+          <!-- usuario Column -->
+          <ng-container matColumnDef="usuario">
+            <th mat-header-cell *matHeaderCellDef>usuario</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.usuario.idUsuario }}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="accion01">
+            <th mat-header-cell *matHeaderCellDef>Acciones</th>
+            <td mat-cell *matCellDef="let element">
+              <button
+                mat-raised-button
+                color="primary"
+                [routerLink]="['ediciones', element.idIncidente]"
+              >
+                <mat-icon>edit</mat-icon> Editar
+              </button>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="accion02">
+            <th mat-header-cell *matHeaderCellDef>Acciones</th>
+            <td mat-cell *matCellDef="let element">
+              <button
+                mat-raised-button
+                color="warn"
+                (click)="eliminar(element.idIncidente)"
+              >
+                <mat-icon>delete</mat-icon> Eliminar
+              </button>
+            </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+        <br />
+        <mat-paginator
+          [pageSizeOptions]="[5, 10, 25, 100]"
+          showFirstLastButtons
+        ></mat-paginator>
+      </div>
+    </body>
+  </html>
+</div>
