--- a/SAFE_PARKING_FRONT/src/app/components/membresia/listar-admin-membresia/listar-admin-membresia.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/listar-admin-membresia/listar-admin-membresia.component.css
@@ -1,18 +1,17 @@
 /*Estilos del form*/
-body {
-  font-family: Arial, sans-serif;
-  background: linear-gradient(to right, #11998e, #38ef7d);
-  margin-left: 250px;
-
-
-}
 
 table {
   background-color: rgb(255, 255, 255);
 }
 
+body{
+  background: linear-gradient(to right, #11998e, #38ef7d);
+  padding: 110px;
+  margin-left: 250px;
+
+}
 .container {
-  width: 90%;
+  width: 800px;
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
