--- a/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/buscar-reserva-estacionamiento/buscar-reserva-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/buscar-reserva-estacionamiento/buscar-reserva-estacionamiento.component.css
@@ -6,7 +6,7 @@
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     width: 800px;
-    margin: 100px auto; /* Centrar horizontalmente */
+    margin:  auto; /* Centrar horizontalmente */
     flex-direction: column;
     justify-content: center; /* Centrar verticalmente */
     align-items: center; /* Centrar horizontalmente */
@@ -16,9 +16,6 @@ body{
   background: linear-gradient(to right, #11998e, #38ef7d);
   padding: 30px;
   margin-left: 250px;
-  height: 130%;
-
-
 }
 .generic-group label {
     font-weight: bold;
