--- a/SAFE_PARKING_FRONT/src/app/components/rol/listar-admin-rol/listar-admin-rol.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/listar-admin-rol/listar-admin-rol.component.css
@@ -3,6 +3,7 @@ body {
   font-family: Arial, sans-serif;
   background: linear-gradient(to right, #11998e, #38ef7d);
   margin-left: 250px;
+  padding: 140px;
 }
 
 table {
