--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.css
@@ -2,6 +2,7 @@ body {
   font-family: Arial, sans-serif;
   background: linear-gradient(to right, #11998e, #38ef7d);
   margin-left: 250px;
+  padding: 90px;
 
 }
 
